# chuk-mcp-telnet-client

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  config.yaml  manifiest.in  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: README.md  basic_usage.py  server_example.py  star_wars_example.py
src/chuk_mcp_telnet_client/: tools.py
tests/: test_telnet_client.py
