[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-telnet-client"
version = "0.2.1"
description = "MCP Telnet Client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chuk-mcp-runtime>=0.10.6",
    "mcp>=1.23.1",
    "pydantic>=2.11.2",
    "pyyaml>=6.0.2",
    "telnetlib3>=2.0.4",
]

[project.scripts]
chuk-mcp-telnet-client = "chuk_mcp_telnet_client.main:main"
mcp-telnet-client = "chuk_mcp_telnet_client.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]  # Change from "." to "src"
include = ["chuk_mcp_telnet_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
